force-app/main/default/objects/Cvent_Registration_Log__c/Cvent_Registration_Log__c.object-meta.xml
<CustomObject>
    <label>Cvent Registration Log</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Cvent Registration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cvent Registration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>