force-app/main/default/objects/Cvent_Registration_Log__c/fields/Cvent_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Contact_Details__c</fullName>
    <label>Cvent Contact Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>