force-app/main/default/objects/Cvent_Registration_Log__c/fields/Cvent_Data__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Data__c</fullName>
    <label>Cvent Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>