force-app/main/default/objects/Cvent_Registration_Log__c/fields/Cvent_Id__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Id__c</fullName>
    <externalId>true</externalId>
    <label>Cvent Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>