force-app/main/default/objects/Cvent_Registration_Log__c/fields/Read_Write_Count__c.field-meta.xml
<CustomField>
    <fullName>Read_Write_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Read/Write Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>