force-app/main/default/objects/Cvent_Registration_Log__c/fields/Retrieved__c.field-meta.xml
<CustomField>
    <fullName>Retrieved__c</fullName>
    <label>Retrieved</label>
    <type>DateTime</type>
</CustomField>