force-app/main/default/objects/Cvent_Registration_Log__c/fields/Searched__c.field-meta.xml
<CustomField>
    <fullName>Searched__c</fullName>
    <label>Searched</label>
    <type>DateTime</type>
</CustomField>