force-app/main/default/objects/Cvent_Registration_Log__c/fields/Sfdc_Upsert_Attempts_Count__c.field-meta.xml
<CustomField>
    <fullName>Sfdc_Upsert_Attempts_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sfdc Upsert Attempts Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>