force-app/main/default/objects/Cvent_Registration_Log__c/fields/Sfdc_Upsert_Last_Attempt_Time__c.field-meta.xml
<CustomField>
    <fullName>Sfdc_Upsert_Last_Attempt_Time__c</fullName>
    <label>Sfdc Upsert Last Attempt Time</label>
    <type>DateTime</type>
</CustomField>