force-app/main/default/objects/Cvent_Registration_Log__c/fields/Sfdc_Upsert_Last_Error__c.field-meta.xml
<CustomField>
    <fullName>Sfdc_Upsert_Last_Error__c</fullName>
    <label>Sfdc Upsert Last Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>