force-app/main/default/objects/Cvent_Registration_Log__c/fields/Successfully_Processed__c.field-meta.xml
<CustomField>
    <fullName>Successfully_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Successfully Processed ?</label>
    <type>Checkbox</type>
</CustomField>