force-app/main/default/objects/Cvent_Registration_Log__c/listViews/Errors.listView-meta.xml
<ListView>
    <fullName>Errors</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Cvent_Data__c</columns>
    <columns>Cvent_Id__c</columns>
    <columns>Cvent_Contact_Details__c</columns>
    <columns>Retrieved__c</columns>
    <columns>Searched__c</columns>
    <columns>Sfdc_Upsert_Attempts_Count__c</columns>
    <columns>Sfdc_Upsert_Last_Attempt_Time__c</columns>
    <columns>Sfdc_Upsert_Last_Error__c</columns>
    <columns>Successfully_Processed__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Successfully_Processed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Errors</label>
</ListView>